# libbase64

./: .gitignore  Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
src/: encode.rs  error.rs  lib.rs
src/error/: code.rs  kind.rs
sys/: Cargo.toml  README.md  build.rs
sys/src/: decode.rs  encode.rs  lib.rs
