cargo-features = ["profile-rustflags"]

[package]
name = "libbase64"
description = "An Full and Safe Wrapper Arround libbase64-sys"
authors = ["Kevin Alexander Krefting <alexgame314@outlook.com>"]
repository = "https://github.com/rulynx/libbase64"
license = "MIT"
readme = "./README.md"
keywords = ["base64", "ffi", "binding", "c", "sys"]
version = "0.1.1-alpha.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "sys",
    "derive",
]

[features]
derive = ["traits"]
traits = []

[lib]
crate-type = ["dylib", "staticlib", "rlib"]

[dependencies]
libbase64-sys = { version = "0.1.1-alpha.0", path = "./sys" }
libbase64-derive = { version = "0.1.1-alpha.0", path = "./derive" }
libc = "0.2.155"

[profile.dev]
opt-level = 0
lto = false
overflow-checks = true

[profile.test]
opt-level = 1
lto = false
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
overflow-checks = false

[profile.bench]
opt-level = 2
lto = true
overflow-checks = true