[package]
name = "libbase64-sys"
version = "0.0.0"
edition = "2021"
exclude = [
    "./b64-referenz",
]

[features]
prelude = []
prelude_root = ["prelude"]
encode = []
decode = []
default = ["prelude_root"]
full = ["encode", "decode", "prelude_root"]
fullnp = ["encode", "decode"]

[lib]
crate-type = ["dylib", "staticlib", "rlib"]

[dependencies]
libc = "0.2.155"

[build-dependencies]
cc = "1.1.6"