[package]
name = "libbase64-sys"
version = "0.0.0"
edition = "2021"

[features]
prelude = []
prelude_root = ["prelude"]
encode = []
decode = []
default = ["prelude_root"]
full = ["encode", "decode", "prelude_root"]
fullnp = ["encode", "decode"]

[lib]
crate-type = ["dylib", "staticlib", "rlib"]

[dependencies]
libc = "0.2.155"

[build-dependencies]
libbase64-build = { version = "0.0.0", path = "../build" }