[package]
name = "libbase64-sys"
description = "An FFI Binding to libb64, cencode.h and cdecode.h"
authors = ["Kevin Alexander Krefting <alexgame314@outlook.com>"]
repository = "https://github.com/rulynx/libbase64"
license = "MIT"
readme = "./README.md"
keywords = ["base64", "ffi", "binding", "c", "sys"]
version = "0.1.2-alpha.0"
edition = "2021"

[features]
prelude = []
prelude_root = ["prelude"]
encode = []
decode = []
default = ["prelude_root"]
full = ["encode", "decode", "prelude_root"]
fullnp = ["encode", "decode"]

[lib]
crate-type = ["dylib", "staticlib", "rlib"]

[dependencies]
libc = "0.2.155"

[build-dependencies]
libc = "0.2.155"
walkdir = "2.5.0"

